exports[`BpkCheckbox should render correctly 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with a small label 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label bpk-checkbox__label--small">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with checked attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    checked={true}
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with disabled attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--disabled">
  <input
    className="bpk-checkbox__input"
    disabled={true}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with id attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    id="checkbox"
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with required attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
    <span
      className="bpk-checkbox__asterix">
      *
    </span>
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with value attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
    value="my-value" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with white attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--white">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox" />
  <span
    className="bpk-checkbox__label">
    Prefer directs
  </span>
</label>
`;
